<resources>
    <string name="app_name">Computadores</string>
    <string name="action_settings">Settings</string>
    <string name="titulo">Crear Computador</string>
    <string name="limpiar">Limpiar</string>


    <string name="Mensaje_guardado_exitoso">Computador guardado Exitosamente!</string>
    <string name="informacion">INFORMACION</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="positivo">Si</string>
    <string name="negativo">No</string>
    <string name="pregunta_eliminacion">¿Esta seguro que desea eliminar este computador?</string>
    <string name="computadores">Computadores</string>
    <string name="marca">Marca :</string>
    <string name="lenovo">Lenovo</string>
    <string name="sony">Sony</string>
    <string name="dell">Dell</string>
    <string-array name="marcas">
        <item>@string/lenovo</item>
        <item>@string/sony</item>
        <item>@string/dell</item>
    </string-array>

    <string name="color">Color</string>
    <string name="negro">Negro</string>
    <string name="blanco">Blanco</string>

    <string-array name="colores">
        <item>@string/negro</item>
        <item>@string/blanco</item>
    </string-array>


    <string name="tipo">Tipo :</string>
    <string name="mesa">Mesa</string>
    <string name="portatil">Portatil</string>

    <string-array name="tipos">
        <item>@string/mesa</item>
        <item>@string/portatil</item>
    </string-array>

    <string name="sistema">S.O. :</string>

    <string name="win">Windows</string>
    <string name="linux">Linux</string>

    <string-array name="sistemas">
        <item>@string/win</item>
        <item>@string/linux</item>
    </string-array>

    <string name="ram">Ram</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>



</resources>
