<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.holamundo.materialpersonas.CrearComputadores"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            tools:context="com.holamundo.materialpersonas.CrearComputadores">

            <TextView
                android:id="@+id/texSo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/texTipo"
                android:layout_marginBottom="213dp"
                android:text="@string/sistema"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/texTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/texMarca"
                android:layout_marginTop="207dp"
                android:text="@string/tipo"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/texMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="31dp"
                android:layout_marginTop="71dp"
                android:text="@string/marca"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/comboSo"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/texSo"
                android:layout_alignStart="@+id/comboMarca" />

            <Spinner
                android:id="@+id/comboTipo"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/comboMarca"
                android:layout_alignTop="@+id/texTipo" />

            <Spinner
                android:id="@+id/comboMarca"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/texMarca"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="135dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtRam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ram"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="56dp"
                android:layout_toStartOf="@+id/comboSo"
                android:onClick="guardar"
                android:text="@string/guardar" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/btnGuardar"
                android:layout_marginEnd="66dp"
                android:onClick="limpiar"
                android:text="@string/limpiar" />
        </RelativeLayout>

        <TextView
            android:id="@+id/texTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/texMarca"
            android:layout_marginTop="142dp"
            android:text="@string/color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/texMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="71dp"
            android:text="@string/marca"
            android:textSize="20sp" />

    <Spinner
        android:id="@+id/comboColor"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/comboMarca"
        android:layout_alignTop="@+id/texTipo" />

    <Spinner
        android:id="@+id/comboMarca"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/texMarca"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp" />
</RelativeLayout>
